--- a/src/app/pages/clientes/clientes.component.html
+++ b/src/app/pages/clientes/clientes.component.html
@@ -1,9 +1,34 @@
+<div class="row p-3">
+   <div class="col-lg-12 col-xl-3">
+    <h5>Clientes econtrados:</h5>
+   </div>
+   <div class="col-lg-12 col-xl-9">
+    <div class="justify-content-end">
+        <div class="row g-3 justify-content-end">
+            <div class="col-auto">
+              <label for="inputPassword6" class="col-form-label">Clientes por página:</label>
+            </div>
+            <div class="col-auto">
+                <select class="form-select" (change)="changed($event)">
+                    <option [value]="2">2</option>
+                    <option [value]="5">5</option>
+                    <option [value]="10">10</option>
+                    <option [value]="20">20</option>
+                    <option [value]="30">30</option>
+                    <option [value]="30">40</option>
+                    <option [value]="30">50</option>
+                  </select>
+            </div>
+          </div>
+    </div>
+   </div>
+    </div>
 <div class="row d-flex align-items-center p-3">
-<div *ngFor="let item of users" class="col-3">
+<div *ngFor="let item of users" class="col-md-12 col-xl-3">
     <div class="card mb-3 p-4 user-card">
             <h4>{{item?.name}}</h4>
-            <h6>Salario {{item?.salary}}</h6>
-            <h6>Empresa {{item?.companyValuation}}</h6>
+            <h6 class="fw-normal">Salário: {{item?.salary | currency : 'R$'}}</h6>
+            <h6 class="fw-normal">Empresa: {{item?.companyValuation | currency : 'R$'}}</h6>
             <div>
                 <button class="btn btn-primary waves-effect waves-light m-r-15"><i class="bi bi-plus-lg m-r-5"></i></button>
                 <button class="btn btn-secondary waves-effect waves-light m-r-15" (click)="openModal(item.id)"><i class="bi bi-pen m-r-5"></i></button>
@@ -13,9 +38,9 @@
 </div>
 </div>
 <div class="d-grid gap-2">
-    <button class="btn btn-outline-primary" (click)="openModal()">Criar cliente</button>
+    <button class="btn btn-outline-primary fw-bold" (click)="openModal()">Criar cliente</button>
   </div>
-<div class="d-flex align-items-center p-3">
+<div class="d-flex align-items-center justify-content-center p-3">
     <ngb-pagination [(page)]="params.page"
                     [pageSize]="params.limit"
                     (pageChange)="pageChanged($event)"
