--- a/src/app/theme/layout/admin/nav-bar/nav-bar.component.html
+++ b/src/app/theme/layout/admin/nav-bar/nav-bar.component.html
@@ -1,13 +1,17 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg bg-white">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">
             <img src="https://teddydigital.io/wp-content/uploads/2023/02/Ativo-13-8.png" alt="Logo" width="100"  class="d-inline-block align-text-top">
           </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" 
+      [attr.aria-expanded]="!collapsed"
+			aria-label="Toggle navigation"
+			(click)="collapsed = !collapsed"
+      data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
+      <div class="collapse navbar-collapse" [class.collapse]="collapsed" id="navbarNav">
+        <ul class="navbar-nav mr-auto text-primary">
             <li class="nav-item">
                 <a class="nav-link active" (click)="open()" aria-current="page"><i class="bi bi-list m-r-5"></i></a>
               </li>
@@ -18,9 +22,12 @@
             <a class="nav-link" href="#">Clientes selecionados</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Sair</a>
+            <a class="nav-link" href="#!" (click)="deslogar()">Sair</a>
           </li>
         </ul>
+        <div class="text-primary">
+          {{usuario}}
+        </div>
       </div>
     </div>
   </nav>
